--- a/client/CSS/tooltip.css
+++ b/client/CSS/tooltip.css
@@ -1,9 +1,9 @@
-/* Tooltip container */
+/* Contenedor del dialogo */
 .tooltip {
   position: relative;
 }
 
-/* Tooltip text */
+/* Texto del dialogo */
 .tooltiptext {
   visibility: hidden;
   width: 150px;
@@ -13,19 +13,19 @@
   padding: 5px;
   border-radius: 6px;
 
-  /* Position the tooltip text */
+  /* Posición del texto */
   position: absolute;
   z-index: 1;
   bottom: 125%;
   left: 50%;
   margin-left: -60px;
 
-  /* Fade in tooltip */
+  /* `Desvanecimiento */
   opacity: 0;
   transition: opacity 0.3s;
 }
 
-/* Show the tooltip text when you mouse over the tooltip container */
+/* Mostrar el dialogo al pasar el mouse sobre el contenedor */
 .tooltip:hover .tooltiptext {
   visibility: visible;
   opacity: 1;
